# content-pipeline-agent

./: README.md  pyproject.toml  pytest.ini  verify_deployment.py
backend/: app.py  scheduler.py
docker/: Dockerfile  entrypoint.sh
social_trend_agent/: docker-compose.dev.yml  docker-compose.yml  run_tests.py  verification_report.json
social_trend_agent/backend/: __init__.py  monitoring.py
social_trend_agent/docker/: deploy.sh  prometheus.yml  update.sh
social_trend_agent/tests/: conftest.py
social_trend_agent/tests/unit/: test_state.py
social_trend_agent/trend_graph/: database.py  models.py
social_trend_agent/trend_graph/nodes/: generate.py  metrics.py  scrape.py
tests/integration/: test_workflow.py
tests/unit/: test_scoring.py
trend_graph/: config.py  graph.py  logging_config.py  state.py
trend_graph/nodes/: post.py  score.py
